entries no longer visible on all components

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -38,6 +38,7 @@ button {
 
 .main-content {
   display: flex;
+  flex-direction: column;
 }
 
 .one-half {
